# grpo-fnd

./: .gitignore  README.md  demo.py  requirements.txt  train_grpo.py
configs/: base.yaml
configs/exp/: qwen3-0.6b_grpo_liar_v2.yaml  qwen3-0.6b_grpo_liar_v2_only_sft.yaml  qwen3-0.6b_grpo_liar_v2_only_sft_label_first.yaml  qwen3-0.6b_liar_vllm.yaml  qwen3-1.7b_grpo_liar_v2.yaml  qwen3-1.7b_grpo_liar_v2_only_sft_label_first.yaml  qwen_grpo_liar_v2.yaml  qwen_grpo_v1.yaml
data/: build_dataset.py  data_model.py
data/processed/: label2id.json
datasets/: json_dataset.py  schemas.py  sent_matcher.py
datasets/collators/: base.py
liar_raw_oracle_free/: README.md  pyproject.toml  requirements.txt
liar_raw_oracle_free/configs/: stage_a.yaml  stage_b.yaml
liar_raw_oracle_free/scripts/: predict_stage_b.sh  run_stage_a.sh  train_stage_b.sh
liar_raw_oracle_free/src/liar_raw/: __init__.py
liar_raw_oracle_free/src/liar_raw/data/: io.py  types.py
liar_raw_oracle_free/src/liar_raw/retrieval/: build_stage_a.py  embedder.py  mmr.py  text_utils.py
liar_raw_oracle_free/src/liar_raw/training/: metrics.py  predict_stage_b.py  stage_b_data.py  train_stage_b.py
outputs/qwen_grpo_v1/: resolved.yaml
prompting/: output_paser.py  prompt_builder.py  prompts.py  target_builder.py
src/: main.py  prompts.py
src/config/: loader.py  registry.py  schemas.py
src/datasets/: data_check.py  grpo_datasets.py  json_dataset.py  sft_datasets.py
src/evaluation/: evaluator.py  evaluator_live_vllm_sync.py  evaluator_vllm.py  live_vllm_generator.py  metrics.py  (+4 more)
test/: vllm.py
(+27 files in other folders)
